# dcindex

./: .gitignore  README.md  pyproject.toml
src/dcindex/: __init__.py
src/dcindex/adapters/: __init__.py  dump_cache.py  dump_reader.py  http_client.py
src/dcindex/cli/: __init__.py  __main__.py
src/dcindex/core/: __init__.py  config.py  editions.py  errors.py  logging.py  models.py
src/dcindex/dto/: __init__.py  contracts.py
src/dcindex/parsers/: __init__.py  base.py  materials.py  mysqldump.py  schedule.py
src/dcindex/services/: __init__.py  container.py  ingest_service.py  search_service.py  session_service.py  stats_service.py
src/dcindex/storage/: __init__.py  db.py  migrations.py  repositories.py  schema.sql  snapshots.py
tests/: conftest.py
tests/fixtures/sql/: dc_sample.sql
tests/integration/: test_ingest.py
tests/unit/: test_dump_cache.py  test_editions.py  test_materials.py  test_mysqldump.py  test_schedule.py  test_session_service.py  test_storage.py
